# localllm-studio

./: .gitignore  Dockerfile  INSTALL_LINUX.sh  INSTALL_MACOS.sh  INSTALL_WINDOWS.bat  LICENSE  README.md  __init__.py  __main__.py  desktop.py  docker-compose.yml  localllm_studio.spec  pyproject.toml  requirements.txt  system_detector.py
.github/workflows/: build.yml
api/: __init__.py  server.py
assets/: icon.icns
backends/: __init__.py  base.py  llamacpp.py  mlx_backend.py  transformers_backend.py
models/: __init__.py  library.py
scripts/: build_linux.sh  build_macos.sh  build_windows.bat  create_dmg.sh
ui/: __init__.py  web.py
utils/: __init__.py  hardware.py
